--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,500;1,300&display=swap" rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
         <div class="container">
             <!--logo-->
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-xs-12 center logoIndex">
+                <div class="col-lg-12 col-md-12 col-xs-12 center logoIndex" data-aos="fade-down">
                     <img src="assets/imagenes/logo.png" alt="logo" width="15%">
                 </div>
             </div>
@@ -26,16 +27,16 @@
         <div class="container">
             <!--nav-->    
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-xs-12 center margin">
+                <div class="col-lg-12 col-md-12 col-xs-12 center margin" data-aos="fade-right">
                     <a href="pages/Tatuajes.html"><button type="button" class="btn btn-light">Tatuajes</button></a>
                 </div>
-                <div class="col-lg-12 col-md-12 col-xs-12 center margin">
+                <div class="col-lg-12 col-md-12 col-xs-12 center margin" data-aos="fade-left">
                     <a href="pages/Obras.html"><button type="button" class="btn btn-light">Obras</button></a>
                 </div>
-                <div class="col-lg-12 col-md-12 col-xs-12 center margin">
+                <div class="col-lg-12 col-md-12 col-xs-12 center margin" data-aos="fade-right">
                     <a href="pages/Perfo.html"><button type="button" class="btn btn-light">Perfo</button></a>
                 </div>
-                <div class="col-lg-12 col-md-12 col-xs-12 center margin">
+                <div class="col-lg-12 col-md-12 col-xs-12 center margin" data-aos="fade-left">
                     <a href="pages/OtrosProyectos.html"><button type="button" class="btn btn-light">Otros Proyectos</button></a>
                 </div>
             </div>
@@ -51,5 +52,9 @@
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
