--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             <!--nav-->    
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-xs-12 center margin" data-aos="fade-right">
-                    <a href="pages/Tatuajes.html"><button type="button" class="btn btn-light">Tatuajes</button></a>
+                    <a href="pages/tatuajes.html"><button type="button" class="btn btn-light">Tatuajes</button></a>
                 </div>
                 <div class="col-lg-12 col-md-12 col-xs-12 center margin" data-aos="fade-left">
-                    <a href="pages/Obras.html"><button type="button" class="btn btn-light">Obras</button></a>
+                    <a href="pages/obras.html"><button type="button" class="btn btn-light">Obras</button></a>
                 </div>
                 <div class="col-lg-12 col-md-12 col-xs-12 center margin" data-aos="fade-right">
-                    <a href="pages/Perfo.html"><button type="button" class="btn btn-light">Perfo</button></a>
+                    <a href="pages/perfo.html"><button type="button" class="btn btn-light">Perfo</button></a>
                 </div>
                 <div class="col-lg-12 col-md-12 col-xs-12 center margin" data-aos="fade-left">
-                    <a href="pages/OtrosProyectos.html"><button type="button" class="btn btn-light">Otros Proyectos</button></a>
+                    <a href="pages/otrosProyectos.html"><button type="button" class="btn btn-light">Otros Proyectos</button></a>
                 </div>
             </div>
         </div>
