--- a/pages/otrosProyectos.html
+++ b/pages/otrosProyectos.html
@@ -26,13 +26,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="Tatuajes.html">Tatuajes</a>
+                            <a class="nav-link" href="tatuajes.html">Tatuajes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Obras.html">Obras</a>
+                            <a class="nav-link" href="obras.html">Obras</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Perfo.html">Perfo</a>
+                            <a class="nav-link" href="perfo.html">Perfo</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Otros Proyectos<span class="sr-only">(current)</span></a>
