--- a/pages/perfo.html
+++ b/pages/perfo.html
@@ -25,16 +25,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="Tatuajes.html">Tatuajes</a>
+                            <a class="nav-link" href="tatuajes.html">Tatuajes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Obras.html">Obras</a>
+                            <a class="nav-link" href="obras.html">Obras</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Perfo<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="OtrosProyectos.html">Otros Proyectos</a>
+                            <a class="nav-link" href="otrosProyectos.html">Otros Proyectos</a>
                         </li>
                     </ul>
                 </div>
