--- a/pages/tatuajes.html
+++ b/pages/tatuajes.html
@@ -27,13 +27,13 @@
                         <a class="nav-link" href="#">Tatuajes <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Obras.html">Obras</a>
+                        <a class="nav-link" href="obras.html">Obras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Perfo.html">Perfo</a>
+                        <a class="nav-link" href="perfo.html">Perfo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="OtrosProyectos.html">Otros Proyectos</a>
+                        <a class="nav-link" href="otrosProyectos.html">Otros Proyectos</a>
                     </li>
                 </ul>
             </div>
@@ -50,28 +50,28 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../assets/imagenes/t11.JPG" class="d-block w-100" alt="1">
+                            <img src="../assets/imagenes/t11.jpg" class="d-block w-100" alt="1">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/imagenes/t22.JPG" class="d-block w-100" alt="2">
+                            <img src="../assets/imagenes/t22.jpg" class="d-block w-100" alt="2">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/imagenes/t33.JPG" class="d-block w-100" alt="3">
+                            <img src="../assets/imagenes/t33.jpg" class="d-block w-100" alt="3">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/imagenes/t44.JPG" class="d-block w-100" alt="4">
+                            <img src="../assets/imagenes/t44.jpg" class="d-block w-100" alt="4">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/imagenes/t55.JPG" class="d-block w-100" alt="5">
+                            <img src="../assets/imagenes/t55.jpg" class="d-block w-100" alt="5">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/imagenes/t66.JPG" class="d-block w-100" alt="6">
+                            <img src="../assets/imagenes/t66.jpg" class="d-block w-100" alt="6">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/imagenes/t77.JPG" class="d-block w-100" alt="7">
+                            <img src="../assets/imagenes/t77.jpg" class="d-block w-100" alt="7">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/imagenes/t88.JPG" class="d-block w-100" alt="8">
+                            <img src="../assets/imagenes/t88.jpg" class="d-block w-100" alt="8">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
