--- a/pages/tatuajes.html
+++ b/pages/tatuajes.html
@@ -46,6 +46,13 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-lg-12 col-md-12 col-xs12">
+                <p>
+                    Mandame tu idea para tu tatuaje por el chat de <a href="https://www.instagram.com/rita_eme/" target="blank" class="ig">Instagram</a>. No te olvides de describir bien tu idea, especificar el tamaño del tatuaje y decirme cual es tu disponibilidad horaria para poder coordinar el turno :)
+                </p>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
